Fix nav button alignement, toggle button size for all screen sizes

--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -2,7 +2,7 @@
 @import '../../styles/Mixins';
 
 .Header-signup {
-  width: 30%;
+  width: 40%;
   height: 100%;
   justify-content: space-between;
 
@@ -43,7 +43,7 @@
   position: fixed;
   display: flex;
   z-index: 100;
-  height: 10%;
+  height: 8%;
   width: 100vw;
   background-color: #000;
   padding: 0 0 0 0;
@@ -64,7 +64,6 @@
   &-brand {
     display: flex;
     justify-content: center;
-    align-content: center;
     font-size: 2.5rem;
     font-family: $header-font;
     background-color: $main-color;
@@ -85,7 +84,7 @@
 
     @include respond(phone) {
       font-size: 2.5rem;
-      width: 50%;
+      width: 40%;
     }
 
     & a {
@@ -105,10 +104,12 @@
   transition: all 0.3s ease;
 
   &:hover {
-    // border-bottom: 1px solid $main-color;
+    border-bottom: 3px solid $main-color;
     color: #fff;
 
     @include respond(tab-portrait) {
+      border-bottom: 1px solid $border-color;
+
       color: $main-color;
     }
   }
@@ -130,6 +131,12 @@
   }
 }
 
+#responsive-navbar-nav {
+  height: 100%;
+}
 .navbar-toggler {
+  height: 100%;
+  padding: 0 2rem;
+  border-left: 2px solid $border-color;
   font-size: 4rem;
 }
